# simple-log

./: .gitignore  .travis.yml  LICENSE  README.md  nightly.yaml  simple-log.cabal  stack.yaml
src/System/: Log.hs  Log.hs~
src/System/Log/: Base.hs  Config.hs  Console.hs  File.hs  HTML.hs  Monad.hs  Simple.hs  Text.hs
src/System/Log/Simple/: Base.hs  Chan.hs  Config.hs  Console.hs  File.hs  Monad.hs  Stream.hs  Text.hs
tests/: Test.hs
