Name:                 simple-log
Version:              0.7.0
Synopsis:             Simple log for Haskell
Description:          Log library for Haskell with removing unnecessary traces
License:              BSD3
License-file:         LICENSE
Author:               Alexandr `Voidex` Ruchkin
Homepage:             http://github.com/mvoidex/simple-log
Maintainer:           voidex@live.com
Category:             Logging
Build-type:           Simple
Cabal-version:        >= 1.10
Tested-with:          GHC == 7.6.1

source-repository head
  type: git
  location: git://github.com/mvoidex/simple-log.git

Library
  hs-source-dirs: src
  build-depends:
    base >= 4.0 && < 6,
    async >= 2.0 && < 3.0,
    base-unicode-symbols >= 0.2 && < 0.3,
    containers >= 0.5 && < 0.6,
    data-default == 0.7.*,
    deepseq >= 1.4 && < 1.5,
    directory >= 1.2 && < 1.4,
    exceptions >= 0.8 && < 0.9,
    filepath >= 1.4 && < 1.5,
    hformat == 0.2.*,
    microlens-platform == 0.3.*,
    mtl >= 2.2 && < 2.3,
    SafeSemaphore >= 0.9.0 && < 1.0.0,
    text >= 0.11.0 && < 2.0.0,
    time >= 1.5 && < 1.7,
    transformers >= 0.4 && < 0.6
  exposed-modules:
    System.Log.Simple
    System.Log.Simple.Base
    System.Log.Simple.Chan
    System.Log.Simple.Monad
    System.Log.Simple.Text
    System.Log.Simple.Console
    System.Log.Simple.File

  default-language: Haskell2010
  default-extensions: UnicodeSyntax
  ghc-options: -Wall -fno-warn-tabs
